# rubot

./: Cargo.toml  LICENSE  a.json  chaos.json  holes.json
example/: node_client.js
example/node/: client.js
example/rust/: Cargo.toml
example/rust/src/: main.rs
src/: config.rs  lib.rs  util.rs
src/robot/: action.rs  block.rs  mod.rs  robot.rs
src/robot/grid/: grid.rs  grid_bombs.rs  grid_holes.rs  mod.rs
